assets/scss/app.scss
@import "settings";

@import "../vendor/foundation/scss/normalize";

@import '../vendor/foundation/scss/foundation';

@import '../vendor/font-awesome/scss/font-awesome.scss';

/*** Global ***/

/*** TO BE REMOVED: for presentation purposes only ***/
.extra-margin {
	padding-top: 140px;
}
/*** END TO BE REMOVED ***/

hr {
	height: 1px;
	color: scale-color($primary-color, $lightness: 60%);
	background-color: scale-color($primary-color, $lightness: 60%);
	border: 0;
}

header.main-header,
.header,
footer.main-footer {
	min-height: 10rem;
}

.content-area {
	background: $white;
	padding-top: 1rem;
}

li.greyed-out a {
	color: rgba(0, 0, 0, 0.3) !important;
}

.rich-text {
	padding-bottom: 1rem;
}

.active {
	font-weight: 700;
}

.less-padding {
	padding: .5rem !important;
}

.hidden {
	display: none;
}

.expander {
	padding: 0 0 .5rem;
	margin-bottom: .5rem;
	text-align: right;
	display: block;
}

.bottom-margin {
	li {
		margin-bottom: 1rem;
	}
}

.grayed-out {
	color: $jumbo;
	.label {
		background: $jumbo;
	}
}

.green {
	color: green;
}

.green-bg {
	background: green;
}

.gray {
	color: gray;
}

.gray-bg {
	background: gray;
}

.red {
	color: red;
}

.inline-list i {
	display: inline-block;
}

/* Highlight newly added filters in the preview box */

.free-filters li:last-child span.label {
	animation: highlight 3s ease;
}

@keyframes highlight {
	from { background: scale-color(yellow, $lightness: 50%); }
	to { background: $primary-color; }
}

/*** Header ***/

header.main-header {
	background: url('/static/images/header-bg.png') center right no-repeat $sand;
	background-size: cover;
}

.header {
	background: url('/static/images/Togatus_Barberini_2392-transparent.png') center left no-repeat;
	background-size: contain;
}

/*** Headings ***/

h1, h2, h3, h4, h5, h6 {
	color: $dark-gold;
}

h1, h2, h3 {
	font-family: 'Julius Sans', sans-serif;
}

h1.site-title,
h2.site-title {
	padding-top: 2rem;
	padding-left: 5rem;
	line-height: 1.25;
	text-shadow: 0 0 1px #666;
}

h3 {
	font-size: 1.25rem;
}

h4, h5, h6 {
	font-family: 'Open Sans Condensed Light', sans-serif;
}

.main h1,
.main h2,
.main h3 {
	font-family: 'Open Sans Condensed Light', sans-serif;
}

.main h1 .label {
	font-size: .75em;
}

/*** Navigation ***/

.top-bar-section ul li {
	border-right: 1px solid scale-color($royal-blue, $lightness: 15%);
}

.top-bar-section ul li:last-child {
	border: none;
}

.top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button) {
	border-bottom: 1px solid scale-color($royal-blue, $lightness: 15%);
}

.top-bar-section .dropdown li:not(.has-form):not(.active) > a:not(.button):hover {
	background: scale-color($royal-blue, $lightness: -15%);
}

/*** Side Nav ***/

h3.quick-home {
	padding-top: 1rem;
}

.quick-home li a {
	text-align: left;
	padding-left: 1rem !important;
	margin: 0;
}

/*** Content ***/

.list-page-title {
	border-bottom: 1px solid $iron;
	margin-bottom: 1rem;
	padding-bottom: .5rem;
	font-size: 1.5rem;
}

.timeline {
	li {
		&:before {
			font-family: "FontAwesome";
			content: "\f111 \A \f106";
			white-space: pre; /* or pre-wrap */
			color: $primary-color;
			padding-right: 10px;
			display: inline-block;
			vertical-align: text-top;
		}
	}

	li li:before {
		content: none;
	}

	.label {
		font-size: 1rem;
	}

	ul {
		border-left: 1px dotted $primary-color;
		padding-left: 1.25rem;
		margin-left: .28125rem !important;
		margin-top: -.5rem;
	}
}

.key {
	font-style: italic;
	font-size: .875rem;
}

/*** Search / Facets / Filters ***/

.options {
	margin-bottom: 0 !important;
	border: 1px solid scale-color($primary-color, $lightness: 70%) !important;
	border-bottom: none !important;
	span,
	a {
		margin-bottom: 0 !important;
	}
}

.search-box {
	padding: 1rem;
	background: $secondary-color;
	border: 1px solid scale-color($primary-color, $lightness: 70%);

	.label.secondary,
	button.secondary,
	.button.secondary {
		background: scale-color($secondary-color, $lightness: -10%);
	}
}

button.name-form {
	color: $dark-gold;
	font-size: .875rem;
	background: scale-color($sand, $lightness: 15%);
	border: 1px solid scale-color($sand, $lightness: -11%);
	padding: .5rem 1rem;
	width: 100%;

	&:hover {
		color: $dark-gold;
		background: scale-color($sand, $lightness: 15%);
	}

	&:after {
		border-color: $dark-gold transparent transparent transparent !important;
	}
}

.drop-list {
	li {
		border-bottom: 1px solid #ccc;
	}
	li:last-child {
		border: none;
	}
}

.offices {
	height: 200px;
	overflow: scroll;
}

.facets hr {
	margin: 0 0 1rem;
}

.panel-head h4 {
	cursor: pointer;
	margin-bottom: 0;
}

.panel-head .label {
	font-size: .75em;
}

.panel-body ul {
	margin-top: 1rem;
	margin-bottom: 0;
}

.panel-body li {
	border-bottom: 1px solid #fff;

	.label {
		margin-top: .25rem;
	}
}

.panel-body li:last-child {
	border-bottom: none;
}

.applied-filter-list {
	clear: both;
	margin-left: 0;
	.label {
		background: scale-color($dark-gold, $lightness: 75%) !important;
		font-size: 1em;
	}

	li {
		margin-left: 0;
		margin-right: .5rem;
		margin-bottom: .5rem;
	}
}

.applied-filter-box {
	background: scale-color($dark-gold, $lightness: 92%);
	border-left: none;
	border-right: none;
	padding: .5rem;
	button,
	.button {
		margin-bottom: .5rem;
	}
}

.search-results {
	font-size: .8125rem;
	color: #444;
	.label {
		margin-top: .5rem;
	}

	li {	
		border-bottom: 1px solid $sand;
		margin-bottom: .5rem;

		.row {
			margin-bottom: .5rem;
		}
		p {
			font-size: .8125rem;
			margin: .5rem 0;
		}
		h4 {
			font-size: 1.25rem;
		}
		h3,
		h4 {
			margin-bottom: .25rem;
		}
	}

	.svg-container {
		margin-top: .5rem !important;
	}
}

.list-sequence {
	margin-left: -.5rem;
	li {
		border-bottom: none;
		margin-left: .5rem;
		&:after {
			font-family: "FontAwesome";
			font-size: .8125rem;
			content: "\f105";
			padding-left: .625rem;
			color: #666;
		}
		&:last-child {
			&:after {
				content: "";
				padding-left: 0;
			}
		}
	}
	span {
		float: left;
	}
}

.list-offices {
	li {
		border-bottom: none;
		margin: 0;
	}
}

.enlarge {
	display: block;
	position: absolute;
	bottom: 0;
	right: 0;
	padding: .5rem;
	text-align: center;
	background: $secondary-color;
}

.results-preview {
	background: scale-color($primary-color, $lightness: 70%);
}

.fixed-height {
	height: 200px;
	overflow: auto;
}

.free-filters li {
	margin: .25rem .25rem 0 0;
	.label {
		font-size: .875rem;
		a {
			color: white;
		}
	}
}

/*** Blog ***/
ul.blog,
ul.blog p {
	font-size: .875rem;
	margin: .5rem 0;
	line-height: 1.25rem
}

ul.blog li {
	display: block;
	overflow: hidden;
	border-bottom: 1px dotted $royal-blue;
	margin: 1rem 0;
	padding-bottom: 1rem;
}

ul.blog li:last-child {
	border-bottom: none;
	margin-bottom: 0;
}

.posts li {
	border-bottom: 1px solid $iron;
}

.postcontent {
	padding-bottom: 1rem;
}

p.meta,
.byline {
	font-size: .75rem !important;
	font-style: italic;
}

.caption {
	font-size: .875rem;
	color: #666;
	padding: .5rem 0 1rem;
}

/*** Events ***/

.events .byline {
	font-size: 1.5rem !important;
	font-style: normal;
}

.events .byline:before {
	content: "\f073 ";
	font-family: 'FontAwesome';
	padding-right: 5px;
}

.events .optional {
	display: none;
}

/*** Sidebar ***/
.sidebar {
	background: $sand;
	padding: 1rem;
}

ul.local-navigation {
	list-style: none;
	margin-left: 0;
	font-family: 'Open Sans Condensed Light', sans-serif;
	font-size: 1.125rem;
}

.local-navigation li {
	border-bottom: 1px solid scale-color($royal-blue, $lightness: 60%);
}

.local-navigation li a {
	padding: .5rem 0;
	display: block;
}

.local-navigation li a:hover {
	background-color: scale-color($royal-blue, $lightness: 70%);
}

/*** Footer ***/

footer.main-footer {
	padding-top: 1rem;
	color: $dark-gold;
}

footer.main-footer,
footer.main-footer p {
	font-size: .75rem;	
}

footer.main-footer a {
	color: $dark-gold;
	border-bottom: 1px dotted $dark-gold;
}

footer.main-footer .logo {
	max-width: 150px;
}

footer.main-footer .logo a {
	border: none !important;
}

footer.main-footer .right p {
	text-align: right;
}

/*** SVG / Graphs / Sigma ***/

.svg-container,
.sigma-container {
    width: 100%;
    margin-bottom: 1rem;
    position: relative;
    border: 3px solid $secondary-color;
}

.svg-container {
    padding-top: 60%;
    height: 0;
}

.svg-title {
	background: $secondary-color;
	padding: .5rem .5rem .375rem;
	margin-bottom: 0;
	font-size: 1.5rem;
}

svg {
    position: absolute;
    top: 0;
    left: 0;
}

.svg-link {
	fill: $primary-color;
	&:hover {
		fill: $dark-gold;
	}
}

.node {
	stroke: #fff;
	stroke-width: 1.5px;
}

.link {
	stroke: #999;
	stroke-opacity: .6;
}

#family-graph {
	display: block;
}

#sigma-container {
	max-width: 100%;
	height: 465px;
	display: block;
}

.reveal-modal .svg-container {
	border: none;
}

/*** Typography ***/

@font-face {
	font-family: 'Julius Sans';
	src: url('/static/fonts/Julius_Sans_One/JuliusSansOne-Regular.ttf');
}

@font-face {
	font-family: 'Open Sans Condensed Light';
	src: url('/static/fonts/Open_Sans_Condensed/OpenSans-CondLight.ttf');
}

@font-face {
	font-family: 'Open Sans Condensed Light Italic';
	src: url('/static/fonts/Open_Sans_Condensed/OpenSans-CondLightItalic.ttf');
}

@font-face {
	font-family: 'Open Sans Condensed Bold';
	src: url('/static/fonts/Open_Sans_Condensed/OpenSans-CondBold.ttf');
}

/*** Custom media queries ***/

@media #{$large-up} {
	h1.site-title,
	h2.site-title {
		font-size: 2.5rem !important;
		width: 80%;
	}
}

@media #{$medium-only} {
	h1.site-title,
	h2.site-title {
		font-size: 2rem;
	}
}

@media #{$small-only} {
	h1.site-title,
	h2.site-title {
		font-size: 1.75rem;
		padding-top: 1em;
	}
}

